:sparkles: Setup mapbox

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 
   <!-- Mapbox GL styles -->
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.2/mapbox-gl.js'></script>
-  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.42.2/mapbox-gl.css' rel='stylesheet' />
+  <link href='https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css' rel='stylesheet' />
 
   <!-- All our css -->
   <link href="/dist/css/mapglyphs.css" rel="stylesheet">
