--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -12,5 +12,6 @@
   </head>
   <body>
     <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </body>
 </html>
