Add countries visited setting. Move page title, description and url to env variables. Cleanup index

--- a/src/index.html
+++ b/src/index.html
@@ -4,36 +4,22 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Travel Log</title>
+    <title><%= htmlWebpackPlugin.options.pageTitle %></title>
     <meta
       name="description"
-      content="An interactive map of everywhere I traveled this year."
+      content="<%= htmlWebpackPlugin.options.description %>"
     />
-    <meta name="author" content="Lauren Hallden" />
 
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
-
-    <!-- Metatags -->
-    <meta property="og:title" content="Travel Log" />
-    <meta property="og:url" content="your_url_here" />
+    <meta
+      property="og:title"
+      content="<%= htmlWebpackPlugin.options.pageTitle %>"
+    />
+    <meta property="og:url" content="<%= htmlWebpackPlugin.options.url %>" />
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="An interactive map of everywhere I traveled this year."
+      content="<%= htmlWebpackPlugin.options.description %>"
     />
-    <meta property="og:image" content="images/travellog.jpg" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Travel Log" />
-    <meta name="tiwtter:creator" content="@your_twitter_handle" />
-    <meta
-      name="twitter:description"
-      content="An interactive map of everywhere I traveled this year."
-    />
-    <meta name="twitter:url" content="your_url_here" />
-    <meta property="og:image" content="images/travellog.jpg" />
 
     <!-- Mapbox GL styles -->
     <meta
@@ -45,12 +31,7 @@
       rel="stylesheet"
     />
 
-    <!-- All our css -->
     <link href="/css/mapglyphs.css" rel="stylesheet" />
-
-    <!--[if lt IE 9]>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-    <![endif]-->
   </head>
 
   <body>
